# Server

./: CMakeLists.txt  README.md
FileClient/: CMakeLists.txt
FileClient/src/: main.cpp
FileServer/: CMakeLists.txt
FileServer/src/: connection.cpp  connection.h  connectionmanager.cpp  echohandler.cpp  echohandler.h  ihandler.h  main.cpp  server.h
src/: connection.cpp  connection.h  connectionmanager.h  echohandler.cpp  echohandler.h  ihandler.h  main.cpp  server.cpp  server.h
